style: fix css bug on navigation on mobile

--- a/components/ui/NavBar/NavBar.module.css
+++ b/components/ui/NavBar/NavBar.module.css
@@ -38,5 +38,6 @@
 		padding: 0;
 		margin: 0;
 		overflow-x: scroll;
+		justify-content: flex-start;
 	}
 }
